--- a/static/css/index.css
+++ b/static/css/index.css
@@ -110,23 +110,26 @@ body {
 .publication-body img {
 }
 
+
 .results-carousel {
-  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 每行四个元素 */
+  grid-gap: 20px; /* 根据需要调整间距 */
+  justify-items: center; /* 居中显示每个视频 */
+  padding: 20px; /* 添加一些内边距 */
 }
 
 .results-carousel .item {
-  margin: 5px;
-  overflow: hidden;
-  border: 1px solid #bbb;
-  border-radius: 10px;
-  padding: 0;
-  font-size: 0;
+  width: 100%; /* 确保视频充满容器 */
+  border: none; /* 如果不需要边框可以去掉 */
+  overflow: hidden; /* 避免内容溢出 */
+  padding: 0; /* 移除内边距 */
 }
 
 .results-carousel video {
-  margin: 0;
+  width: 100%; /* 视频充满整个.item容器 */
+  height: auto; /* 保持视频的原始高宽比 */
 }
-
 
 .interpolation-panel {
   background: #f5f5f5;
