--- a/static/css/index.css
+++ b/static/css/index.css
@@ -159,6 +159,8 @@ body {
   border-radius: 5px;
 }
 
+
+
 .video-small-grid {
   display: grid;
   grid-template-columns: repeat(1, 1fr); /* 每行只显示一个视频 */
@@ -167,10 +169,15 @@ body {
   padding: 20px; /* 边距为20px */
 }
 
-video {
+.video {
   width: 100%; /* 视频宽度占满整个网格列 */
   height: auto; /* 高度自动调整以保持视频比例 */
+  border: 1px solid #747474;
+  border-radius: 10px;
+  overflow: hidden;
 }
+
+
 
 
 .video-grid {
@@ -181,7 +188,11 @@ video {
 
 .video {
   width: 100%; /* 视频宽度填满容器 */
+  border: 1px solid #747474;
+  border-radius: 10px;
+  overflow: hidden;
 }
+
 
 
 .video-long-grid {
@@ -195,18 +206,23 @@ video {
 .video-long {
   width: 100%; /* Sets each video to take up half the width of .media-grid, making two videos per row */
   height: auto;
+  border: 1px solid #747474;
+  border-radius: 10px;
+  overflow: hidden;
 }
+
+
 
 .video-description {
   text-align: center;
-  color: #666;
+  color: #747474;
   font-size: 20px;
   margin-top: 10px;
 }
 
 .long-video-description {
   text-align: center;
-  color: #666;
+  color: #747474;
   font-size: 20px;
   margin-top: 10px;
 }
